update byline 'published' logic and fix spacing on stacked and no-visual headlines

--- a/styles/brandStylesCommon.less
+++ b/styles/brandStylesCommon.less
@@ -4,7 +4,7 @@
   &.left {
     text-align: left;
   }
-  @media @max-text-width {
+  @media (max-width: 960px) {
     text-align: left;
     padding: 0 @s16;
   }
